--- a/application.yml
+++ b/application.yml
@@ -13,5 +13,5 @@ spring:
     
 eureka:
   instance:
-    hostname: ${APPLICATION_DOMAIN}
+    hostname: ${vcap.application.uris[0]}
     nonSecurePort: 80
